fixed the gap in footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -511,8 +511,8 @@ img {
 
 .form {
   display: flex;
+  gap: 24px;
 }
-
 .input {
   width: 264px;
   height: 40px;
